[package]
name = "Final_Project"
version = "0.1.0"
edition = "2021"

[dependencies]
oauth2 = "4.4.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
warp = "0.3"
open = "5"
rand = "0.9.1"
futures = "0.3.31"
